<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:padding="50dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:text="@string/newHighscoreText"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView android:id="@+id/dialogScoreText"
                  android:text="@string/dialogScoreText"
                  android:textSize="35sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingStart="20dp"
                  android:paddingEnd="20dp"/>

        <TextView android:id="@+id/dialogScore"
                  android:textSize="35sp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText android:id="@+id/nameEntered"
              android:inputType="text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:ems="10"
              android:textSize="30sp"
              android:hint="@string/dialogName"
              android:importantForAutofill="no"
              android:layout_marginBottom="30dp"/>

    <Button android:id="@+id/enterNameButton"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:text="@string/dialogButton"
            android:background="@drawable/btn_shape_round"/>

</LinearLayout>
