<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.mosy.HighScoreActivity">

    <TextView
            android:text="@string/highScoreTitle"
            android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreTitle"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="70dp"/>

    <TableLayout android:layout_width="600dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center">

        <TableRow android:gravity="end"
                  android:weightSum="2"
                  android:layout_marginBottom="15dp">
            <TextView
                    android:id="@+id/HighScoreTablePlace"
                    android:text="@string/scoreTop1"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:visibility="invisible"/>
            <TextView
                    android:id="@+id/HighScoreTableName"
                    android:text="@string/highScoreTableName"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/HighScoreTableScore"
                    android:text="@string/highScoreTableScore"
                    android:textSize="40sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center"
                  android:weightSum="2"
                  android:layout_marginBottom="8dp">
            <TextView
                    android:id="@+id/HighScoreTableTop1"
                    android:text="@string/scoreTop1"
                    android:textSize="30sp"
                    android:gravity="center"/>
            <TextView
                    android:id="@+id/Top1Name"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/Top1Score"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center"
                  android:weightSum="2"
                  android:layout_marginBottom="8dp">
            <TextView
                    android:id="@+id/HighScoreTableTop2"
                    android:text="@string/scoreTop2"
                    android:textSize="30sp"
                    android:gravity="center"/>
            <TextView
                    android:id="@+id/Top2Name"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/Top2Score"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center"
                  android:weightSum="2"
                  android:layout_marginBottom="8dp">
            <TextView
                    android:id="@+id/HighScoreTableTop3"
                    android:text="@string/scoreTop3"
                    android:textSize="30sp"
                    android:gravity="center"/>
            <TextView
                    android:id="@+id/Top3Name"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/Top3Score"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center"
                  android:weightSum="2"
                  android:layout_marginBottom="8dp">
            <TextView
                    android:id="@+id/HighScoreTableTop4"
                    android:text="@string/scoreTop4"
                    android:textSize="30sp"
                    android:gravity="center"/>
            <TextView
                    android:id="@+id/Top4Name"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/Top4Score"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </TableRow>

        <TableRow android:gravity="center"
                  android:weightSum="2"
                  android:layout_marginBottom="8dp">
            <TextView
                    android:id="@+id/HighScoreTableTop5"
                    android:text="@string/scoreTop5"
                    android:textSize="30sp"
                    android:gravity="center"/>
            <TextView
                    android:id="@+id/Top5Name"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <TextView
                    android:id="@+id/Top5Score"
                    android:text="@string/defaultValue"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
